@@ -1,3 +1,9 @@
+2009-08-18  Ankit Jain  <jankit@novell.com>
+
+	* SolutionParser.cs (ParseSolution): Project reference in a project
+	file, but not found in .sln file is ignored. Also, add dependencies
+	specified in the .sln file.
+
 2009-08-14  Ankit Jain  <jankit@novell.com>
 
 	Fix bug #530368.
